--- a/labeller.ui
+++ b/labeller.ui
@@ -61,114 +61,138 @@
        <item>
         <layout class="QGridLayout" name="gridLayout_4" rowstretch="0,0">
          <item row="0" column="7">
-          <widget class="QCheckBox" name="checkBox_6">
+          <widget class="QCheckBox" name="plate8_box">
            <property name="text">
-            <string>8</string>
+            <string>&amp;8</string>
            </property>
           </widget>
          </item>
          <item row="0" column="5">
-          <widget class="QCheckBox" name="checkBox_7">
+          <widget class="QCheckBox" name="plate6_box">
            <property name="text">
-            <string>6</string>
+            <string>&amp;6</string>
            </property>
           </widget>
          </item>
          <item row="0" column="0">
-          <widget class="QCheckBox" name="checkBox_2">
+          <widget class="QCheckBox" name="plate1_box">
            <property name="text">
-            <string>1</string>
+            <string>&amp;1</string>
            </property>
           </widget>
          </item>
          <item row="0" column="3">
-          <widget class="QCheckBox" name="checkBox">
+          <widget class="QCheckBox" name="plate4_box">
            <property name="text">
-            <string>4</string>
+            <string>&amp;4</string>
            </property>
           </widget>
          </item>
          <item row="0" column="4">
-          <widget class="QCheckBox" name="checkBox_5">
+          <widget class="QCheckBox" name="plate5_box">
            <property name="text">
-            <string>5</string>
+            <string>&amp;5</string>
            </property>
           </widget>
          </item>
          <item row="0" column="2">
-          <widget class="QCheckBox" name="checkBox_4">
+          <widget class="QCheckBox" name="plate3_box">
            <property name="text">
-            <string>3</string>
+            <string>&amp;3</string>
            </property>
           </widget>
          </item>
          <item row="0" column="1">
-          <widget class="QCheckBox" name="checkBox_3">
+          <widget class="QCheckBox" name="plate2_box">
            <property name="text">
-            <string>2</string>
+            <string>&amp;2</string>
            </property>
           </widget>
          </item>
          <item row="0" column="6">
-          <widget class="QCheckBox" name="checkBox_8">
+          <widget class="QCheckBox" name="plate7_box">
            <property name="text">
-            <string>7</string>
+            <string>&amp;7</string>
            </property>
           </widget>
          </item>
          <item row="1" column="0">
-          <widget class="QLineEdit" name="lineEdit">
+          <widget class="QLineEdit" name="plate1_number">
            <property name="inputMask">
             <string>&gt;AA99</string>
+           </property>
+           <property name="placeholderText">
+            <string>AB12</string>
            </property>
           </widget>
          </item>
          <item row="1" column="1">
-          <widget class="QLineEdit" name="lineEdit_2">
+          <widget class="QLineEdit" name="plate2_number">
            <property name="inputMask">
             <string>&gt;AA99</string>
+           </property>
+           <property name="placeholderText">
+            <string>AB12</string>
            </property>
           </widget>
          </item>
          <item row="1" column="2">
-          <widget class="QLineEdit" name="lineEdit_3">
+          <widget class="QLineEdit" name="plate3_number">
            <property name="inputMask">
             <string>&gt;AA99</string>
+           </property>
+           <property name="placeholderText">
+            <string>AB12</string>
            </property>
           </widget>
          </item>
          <item row="1" column="3">
-          <widget class="QLineEdit" name="lineEdit_4">
+          <widget class="QLineEdit" name="plate4_number">
            <property name="inputMask">
             <string>&gt;AA99</string>
+           </property>
+           <property name="placeholderText">
+            <string>AB12</string>
            </property>
           </widget>
          </item>
          <item row="1" column="4">
-          <widget class="QLineEdit" name="lineEdit_5">
+          <widget class="QLineEdit" name="plate5_number">
            <property name="inputMask">
             <string>&gt;AA99</string>
+           </property>
+           <property name="placeholderText">
+            <string>AB12</string>
            </property>
           </widget>
          </item>
          <item row="1" column="5">
-          <widget class="QLineEdit" name="lineEdit_6">
+          <widget class="QLineEdit" name="plate6_number">
            <property name="inputMask">
             <string>&gt;AA99</string>
+           </property>
+           <property name="placeholderText">
+            <string>AB12</string>
            </property>
           </widget>
          </item>
          <item row="1" column="6">
-          <widget class="QLineEdit" name="lineEdit_7">
+          <widget class="QLineEdit" name="plate7_number">
            <property name="inputMask">
             <string>&gt;AA99</string>
+           </property>
+           <property name="placeholderText">
+            <string>AB12</string>
            </property>
           </widget>
          </item>
          <item row="1" column="7">
-          <widget class="QLineEdit" name="lineEdit_8">
+          <widget class="QLineEdit" name="plate8_number">
            <property name="inputMask">
             <string>&gt;AA99</string>
+           </property>
+           <property name="placeholderText">
+            <string>AB12</string>
            </property>
           </widget>
          </item>
