--- a/labeller.ui
+++ b/labeller.ui
@@ -36,7 +36,7 @@
        <item>
         <widget class="QLabel" name="frame">
          <property name="text">
-          <string>TextLabel</string>
+          <string/>
          </property>
         </widget>
        </item>
