--- a/labeller.ui
+++ b/labeller.ui
@@ -27,7 +27,7 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QPushButton" name="prev_frame">
+        <widget class="QPushButton" name="prev_frame_button">
          <property name="text">
           <string>&amp;&lt;</string>
          </property>
@@ -41,7 +41,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="next_frame">
+        <widget class="QPushButton" name="next_frame_button">
          <property name="text">
           <string>&amp;&gt;</string>
          </property>
