--- a/labeller.ui
+++ b/labeller.ui
@@ -28,6 +28,9 @@
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QPushButton" name="prev_frame_button">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
           <string>&amp;&lt;</string>
          </property>
@@ -42,6 +45,9 @@
        </item>
        <item>
         <widget class="QPushButton" name="next_frame_button">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
           <string>&amp;&gt;</string>
          </property>
@@ -53,6 +59,9 @@
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QPushButton" name="copy_prev">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
           <string>Copy &amp;previous</string>
          </property>
@@ -62,6 +71,9 @@
         <layout class="QGridLayout" name="gridLayout_4" rowstretch="0,0">
          <item row="0" column="7">
           <widget class="QCheckBox" name="plate8_box">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="text">
             <string>&amp;8</string>
            </property>
@@ -69,6 +81,9 @@
          </item>
          <item row="0" column="5">
           <widget class="QCheckBox" name="plate6_box">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="text">
             <string>&amp;6</string>
            </property>
@@ -76,6 +91,9 @@
          </item>
          <item row="0" column="0">
           <widget class="QCheckBox" name="plate1_box">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="text">
             <string>&amp;1</string>
            </property>
@@ -83,6 +101,9 @@
          </item>
          <item row="0" column="3">
           <widget class="QCheckBox" name="plate4_box">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="text">
             <string>&amp;4</string>
            </property>
@@ -90,6 +111,9 @@
          </item>
          <item row="0" column="4">
           <widget class="QCheckBox" name="plate5_box">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="text">
             <string>&amp;5</string>
            </property>
@@ -97,6 +121,9 @@
          </item>
          <item row="0" column="2">
           <widget class="QCheckBox" name="plate3_box">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="text">
             <string>&amp;3</string>
            </property>
@@ -104,6 +131,9 @@
          </item>
          <item row="0" column="1">
           <widget class="QCheckBox" name="plate2_box">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="text">
             <string>&amp;2</string>
            </property>
@@ -111,6 +141,9 @@
          </item>
          <item row="0" column="6">
           <widget class="QCheckBox" name="plate7_box">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="text">
             <string>&amp;7</string>
            </property>
@@ -118,6 +151,9 @@
          </item>
          <item row="1" column="0">
           <widget class="QLineEdit" name="plate1_number">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="inputMask">
             <string>&gt;AA99</string>
            </property>
@@ -128,6 +164,9 @@
          </item>
          <item row="1" column="1">
           <widget class="QLineEdit" name="plate2_number">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="inputMask">
             <string>&gt;AA99</string>
            </property>
@@ -138,6 +177,9 @@
          </item>
          <item row="1" column="2">
           <widget class="QLineEdit" name="plate3_number">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="inputMask">
             <string>&gt;AA99</string>
            </property>
@@ -148,6 +190,9 @@
          </item>
          <item row="1" column="3">
           <widget class="QLineEdit" name="plate4_number">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="inputMask">
             <string>&gt;AA99</string>
            </property>
@@ -158,6 +203,9 @@
          </item>
          <item row="1" column="4">
           <widget class="QLineEdit" name="plate5_number">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="inputMask">
             <string>&gt;AA99</string>
            </property>
@@ -168,6 +216,9 @@
          </item>
          <item row="1" column="5">
           <widget class="QLineEdit" name="plate6_number">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="inputMask">
             <string>&gt;AA99</string>
            </property>
@@ -178,6 +229,9 @@
          </item>
          <item row="1" column="6">
           <widget class="QLineEdit" name="plate7_number">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="inputMask">
             <string>&gt;AA99</string>
            </property>
@@ -188,6 +242,9 @@
          </item>
          <item row="1" column="7">
           <widget class="QLineEdit" name="plate8_number">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="inputMask">
             <string>&gt;AA99</string>
            </property>
@@ -200,6 +257,9 @@
        </item>
        <item>
         <widget class="QPushButton" name="copy_next">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
           <string>Copy &amp;next</string>
          </property>
