--- a/labeller.ui
+++ b/labeller.ui
@@ -68,97 +68,11 @@
         </widget>
        </item>
        <item>
-        <layout class="QGridLayout" name="gridLayout_4" rowstretch="0,0">
-         <item row="0" column="7">
-          <widget class="QCheckBox" name="plate8_box">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
-           <property name="text">
-            <string>&amp;8</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="5">
-          <widget class="QCheckBox" name="plate6_box">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
-           <property name="text">
-            <string>&amp;6</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="0">
-          <widget class="QCheckBox" name="plate1_box">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
-           <property name="text">
-            <string>&amp;1</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="3">
-          <widget class="QCheckBox" name="plate4_box">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
-           <property name="text">
-            <string>&amp;4</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="4">
-          <widget class="QCheckBox" name="plate5_box">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
-           <property name="text">
-            <string>&amp;5</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="2">
-          <widget class="QCheckBox" name="plate3_box">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
-           <property name="text">
-            <string>&amp;3</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="1">
-          <widget class="QCheckBox" name="plate2_box">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
-           <property name="text">
-            <string>&amp;2</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="6">
-          <widget class="QCheckBox" name="plate7_box">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
-           <property name="text">
-            <string>&amp;7</string>
-           </property>
-          </widget>
-         </item>
+        <layout class="QGridLayout" name="label_grid" rowstretch="0,0,0,0">
          <item row="1" column="0">
-          <widget class="QLineEdit" name="plate1_number">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
-           <property name="inputMask">
-            <string>&gt;AA99</string>
-           </property>
-           <property name="placeholderText">
-            <string>AB12</string>
+          <widget class="QLabel" name="label_2">
+           <property name="text">
+            <string>2</string>
            </property>
           </widget>
          </item>
@@ -175,46 +89,7 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="2">
-          <widget class="QLineEdit" name="plate3_number">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
-           <property name="inputMask">
-            <string>&gt;AA99</string>
-           </property>
-           <property name="placeholderText">
-            <string>AB12</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="3">
-          <widget class="QLineEdit" name="plate4_number">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
-           <property name="inputMask">
-            <string>&gt;AA99</string>
-           </property>
-           <property name="placeholderText">
-            <string>AB12</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="4">
-          <widget class="QLineEdit" name="plate5_number">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
-           <property name="inputMask">
-            <string>&gt;AA99</string>
-           </property>
-           <property name="placeholderText">
-            <string>AB12</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="5">
+         <item row="1" column="6">
           <widget class="QLineEdit" name="plate6_number">
            <property name="enabled">
             <bool>false</bool>
@@ -227,7 +102,87 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="6">
+         <item row="0" column="1">
+          <widget class="QLineEdit" name="plate1_number">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="inputMask">
+            <string>&gt;AA99</string>
+           </property>
+           <property name="placeholderText">
+            <string>AB12</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="label">
+           <property name="text">
+            <string>1</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="5">
+          <widget class="QLabel" name="label_5">
+           <property name="text">
+            <string>5</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0">
+          <widget class="QLabel" name="label_3">
+           <property name="text">
+            <string>3</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
+          <widget class="QLineEdit" name="plate3_number">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="inputMask">
+            <string>&gt;AA99</string>
+           </property>
+           <property name="placeholderText">
+            <string>AB12</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="0">
+          <widget class="QLabel" name="label_4">
+           <property name="text">
+            <string>4</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="1">
+          <widget class="QLineEdit" name="plate4_number">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="inputMask">
+            <string>&gt;AA99</string>
+           </property>
+           <property name="placeholderText">
+            <string>AB12</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="6">
+          <widget class="QLineEdit" name="plate5_number">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="inputMask">
+            <string>&gt;AA99</string>
+           </property>
+           <property name="placeholderText">
+            <string>AB12</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="6">
           <widget class="QLineEdit" name="plate7_number">
            <property name="enabled">
             <bool>false</bool>
@@ -240,7 +195,7 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="7">
+         <item row="3" column="6">
           <widget class="QLineEdit" name="plate8_number">
            <property name="enabled">
             <bool>false</bool>
@@ -250,6 +205,27 @@
            </property>
            <property name="placeholderText">
             <string>AB12</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="5">
+          <widget class="QLabel" name="label_6">
+           <property name="text">
+            <string>6</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="5">
+          <widget class="QLabel" name="label_7">
+           <property name="text">
+            <string>7</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="5">
+          <widget class="QLabel" name="label_8">
+           <property name="text">
+            <string>8</string>
            </property>
           </widget>
          </item>
@@ -306,6 +282,20 @@
    </property>
   </action>
  </widget>
+ <tabstops>
+  <tabstop>prev_frame_button</tabstop>
+  <tabstop>next_frame_button</tabstop>
+  <tabstop>copy_prev</tabstop>
+  <tabstop>plate1_number</tabstop>
+  <tabstop>plate2_number</tabstop>
+  <tabstop>plate3_number</tabstop>
+  <tabstop>plate4_number</tabstop>
+  <tabstop>plate5_number</tabstop>
+  <tabstop>plate6_number</tabstop>
+  <tabstop>plate7_number</tabstop>
+  <tabstop>plate8_number</tabstop>
+  <tabstop>copy_next</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
