--- a/labeller.ui
+++ b/labeller.ui
@@ -144,6 +144,9 @@
            <property name="placeholderText">
             <string>AB12</string>
            </property>
+           <property name="plate_number" stdset="0">
+            <number>2</number>
+           </property>
           </widget>
          </item>
          <item row="1" column="6">
@@ -157,6 +160,9 @@
            <property name="placeholderText">
             <string>AB12</string>
            </property>
+           <property name="plate_number" stdset="0">
+            <number>6</number>
+           </property>
           </widget>
          </item>
          <item row="0" column="1">
@@ -169,6 +175,9 @@
            </property>
            <property name="placeholderText">
             <string>AB12</string>
+           </property>
+           <property name="plate_number" stdset="0">
+            <number>1</number>
            </property>
           </widget>
          </item>
@@ -204,6 +213,9 @@
            <property name="placeholderText">
             <string>AB12</string>
            </property>
+           <property name="plate_number" stdset="0">
+            <number>3</number>
+           </property>
           </widget>
          </item>
          <item row="3" column="0">
@@ -224,6 +236,9 @@
            <property name="placeholderText">
             <string>AB12</string>
            </property>
+           <property name="plate_number" stdset="0">
+            <number>4</number>
+           </property>
           </widget>
          </item>
          <item row="0" column="6">
@@ -236,6 +251,9 @@
            </property>
            <property name="placeholderText">
             <string>AB12</string>
+           </property>
+           <property name="plate_number" stdset="0">
+            <number>5</number>
            </property>
           </widget>
          </item>
@@ -250,6 +268,9 @@
            <property name="placeholderText">
             <string>AB12</string>
            </property>
+           <property name="plate_number" stdset="0">
+            <number>7</number>
+           </property>
           </widget>
          </item>
          <item row="3" column="6">
@@ -262,6 +283,9 @@
            </property>
            <property name="placeholderText">
             <string>AB12</string>
+           </property>
+           <property name="plate_number" stdset="0">
+            <number>8</number>
            </property>
           </widget>
          </item>
