Add plate number property to check boxes

--- a/labeller.ui
+++ b/labeller.ui
@@ -65,9 +65,12 @@
         </widget>
        </item>
        <item>
-        <widget class="QCheckBox" name="checkBox">
+        <widget class="QCheckBox" name="checkBox_1">
          <property name="text">
           <string>&amp;1</string>
+         </property>
+         <property name="plate_number" stdset="0">
+          <number>1</number>
          </property>
         </widget>
        </item>
@@ -76,12 +79,18 @@
          <property name="text">
           <string>&amp;2</string>
          </property>
+         <property name="plate_number" stdset="0">
+          <number>2</number>
+         </property>
         </widget>
        </item>
        <item>
         <widget class="QCheckBox" name="checkBox_3">
          <property name="text">
           <string>&amp;3</string>
+         </property>
+         <property name="plate_number" stdset="0">
+          <number>3</number>
          </property>
         </widget>
        </item>
@@ -90,12 +99,18 @@
          <property name="text">
           <string>&amp;4</string>
          </property>
+         <property name="plate_number" stdset="0">
+          <number>4</number>
+         </property>
         </widget>
        </item>
        <item>
         <widget class="QCheckBox" name="checkBox_5">
          <property name="text">
           <string>&amp;5</string>
+         </property>
+         <property name="plate_number" stdset="0">
+          <number>5</number>
          </property>
         </widget>
        </item>
@@ -104,6 +119,9 @@
          <property name="text">
           <string>&amp;6</string>
          </property>
+         <property name="plate_number" stdset="0">
+          <number>6</number>
+         </property>
         </widget>
        </item>
        <item>
@@ -111,12 +129,18 @@
          <property name="text">
           <string>&amp;7</string>
          </property>
+         <property name="plate_number" stdset="0">
+          <number>7</number>
+         </property>
         </widget>
        </item>
        <item>
         <widget class="QCheckBox" name="checkBox_8">
          <property name="text">
           <string>&amp;8</string>
+         </property>
+         <property name="plate_number" stdset="0">
+          <number>8</number>
          </property>
         </widget>
        </item>
