Readable plates should be mutually exclusive

--- a/labeller.ui
+++ b/labeller.ui
@@ -58,107 +58,120 @@
          </widget>
         </item>
         <item>
-         <widget class="QCheckBox" name="checkBox_1">
+         <widget class="QRadioButton" name="radioButton_0">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>None (&amp;0)</string>
+          </property>
+          <attribute name="buttonGroup">
+           <string notr="true">buttonGroup</string>
+          </attribute>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="radioButton_1">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="text">
            <string>&amp;1</string>
           </property>
-          <property name="plate_number" stdset="0">
-           <number>1</number>
-          </property>
+          <attribute name="buttonGroup">
+           <string notr="true">buttonGroup</string>
+          </attribute>
          </widget>
         </item>
         <item>
-         <widget class="QCheckBox" name="checkBox_2">
+         <widget class="QRadioButton" name="radioButton_2">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="text">
            <string>&amp;2</string>
           </property>
-          <property name="plate_number" stdset="0">
-           <number>2</number>
-          </property>
+          <attribute name="buttonGroup">
+           <string notr="true">buttonGroup</string>
+          </attribute>
          </widget>
         </item>
         <item>
-         <widget class="QCheckBox" name="checkBox_3">
+         <widget class="QRadioButton" name="radioButton_3">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="text">
            <string>&amp;3</string>
           </property>
-          <property name="plate_number" stdset="0">
-           <number>3</number>
-          </property>
+          <attribute name="buttonGroup">
+           <string notr="true">buttonGroup</string>
+          </attribute>
          </widget>
         </item>
         <item>
-         <widget class="QCheckBox" name="checkBox_4">
+         <widget class="QRadioButton" name="radioButton_4">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="text">
            <string>&amp;4</string>
           </property>
-          <property name="plate_number" stdset="0">
-           <number>4</number>
-          </property>
+          <attribute name="buttonGroup">
+           <string notr="true">buttonGroup</string>
+          </attribute>
          </widget>
         </item>
         <item>
-         <widget class="QCheckBox" name="checkBox_5">
+         <widget class="QRadioButton" name="radioButton_5">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="text">
            <string>&amp;5</string>
           </property>
-          <property name="plate_number" stdset="0">
-           <number>5</number>
-          </property>
+          <attribute name="buttonGroup">
+           <string notr="true">buttonGroup</string>
+          </attribute>
          </widget>
         </item>
         <item>
-         <widget class="QCheckBox" name="checkBox_6">
+         <widget class="QRadioButton" name="radioButton_6">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="text">
            <string>&amp;6</string>
           </property>
-          <property name="plate_number" stdset="0">
-           <number>6</number>
-          </property>
+          <attribute name="buttonGroup">
+           <string notr="true">buttonGroup</string>
+          </attribute>
          </widget>
         </item>
         <item>
-         <widget class="QCheckBox" name="checkBox_7">
+         <widget class="QRadioButton" name="radioButton_7">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="text">
            <string>&amp;7</string>
           </property>
-          <property name="plate_number" stdset="0">
-           <number>7</number>
-          </property>
+          <attribute name="buttonGroup">
+           <string notr="true">buttonGroup</string>
+          </attribute>
          </widget>
         </item>
         <item>
-         <widget class="QCheckBox" name="checkBox_8">
+         <widget class="QRadioButton" name="radioButton_8">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="text">
            <string>&amp;8</string>
           </property>
-          <property name="plate_number" stdset="0">
-           <number>8</number>
-          </property>
+          <attribute name="buttonGroup">
+           <string notr="true">buttonGroup</string>
+          </attribute>
          </widget>
         </item>
        </layout>
@@ -409,4 +422,7 @@
  </tabstops>
  <resources/>
  <connections/>
+ <buttongroups>
+  <buttongroup name="buttonGroup"/>
+ </buttongroups>
 </ui>
